--- a/style.css
+++ b/style.css
@@ -1,172 +1,157 @@
-html {
-    box-sizing: border-box;
-    font-size: 1rem;
+/*
+Theme Name: myTheme
+ *
+ *
+ */
+
+html{
+	text-align: center;
+    	background-color: #e2e2e2;
+    	color: white;
+    	font-family: 'Courier New', Courier, monospace;
 }
 
-body {
-    margin-bottom: 20px;
-    width: 80%;
-    padding-bottom: 50px;
-    max-width: 1280px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: white;
-    background-color: black;
+body{
+	margin-bottom: 20px;
+  	padding-bottom: 50px;
+	width: 1280px;
+	max-width: 1280px;
+    	font-size: 1rem;
+    	line-height: 1.5;
+    	color: #333333;
 }
 
-h1, h2, h3 {
-    margin: 0;
-    font-weight: normal;
+
+h1, h2{
+	text-align: center;
+	background-color: #ffd700;
+	max-width: 20%;
+	margin: 15px auto;
+	border-radius: 1000px;
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
 }
 
-div {
-    margin-bottom: 20px;
+.titulo {
+	max-width: 80%;
+	font-family: "Helvetica Neue", Arial, sans-serif;
+  	font-size: 2rem;
+  	font-weight: bold;
+  	color: #333;
+  	text-align: center;
+  	text-transform: uppercase;
+  	letter-spacing: 2px;
+  	margin: 5px auto;
+  	padding: 20px;
+  	background-color: rgba(230, 0,0, 0.7);
+  	border-bottom: 2px solid #ccc;
+  	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-header{
-    padding: 1rem;
-    text-align: center;
-    background-color: gray;
-    box-shadow: 0 0 20px rgba(0,0,0,.1);
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-h1 {
-    font-size: 1.8rem;
-    margin-bottom: .5rem;
+button:hover, .button:hover {
+  background-color: #0056b3;
 }
 
-h2 {
-    font-size: 1.4rem;
-    margin-bottom: 1.5rem;
-    color: white;
+.imagem-logo-eba{
+	float: right;
+	max-width: 10%;
 }
-h3 {
-    color: green;
-    font-size: 1.2rem;
-    margin-bottom: .5rem;
-    padding: 0;
-}
+
 a {
-    color: red;
-    text-decoration: none;
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 a:hover {
-    color: orange;
-    text-decoration: underline;
+  color: #0056b3;
+  text-decoration: underline;
 }
 
-a:visited {
-    color: yellow;
-    text-decoration: none;
+a:focus {
+  outline: none;
+  box-shadow: 0 0 3px rgba(0, 123, 255, 0.5);
 }
 
-.intro {
-    padding: 2rem;margin-bottom: 100px; 
-    background-color: black;
-}
-
-.intro h1{
-    color: #333;
-}
-
-.summary p {
-    margin: 0 0 1.5rem;
-    color: white;
-}
-
-.preamble {
-    padding: 2rem;
-    background-color: gray;
-    color: white;
-    box-shadow: 0 0 20px rgba(0,0,0,.1);
-}
-
-.preamble h3 {
-    font-size: 1.5rem;
-    margin-bottom: .5rem;
-    color: #2d2d2d;
-}
-
-.preamble p {
-    margin-bottom: 1.5rem;
-}
-
-.explanation {
-    padding: 2rem;
-    color:#fff;
-}
-
-.explanation p {
-    margin-bottom: 1.5rem;
-}
-
-.participation {
-    padding: 2rem;
-    text-align: right;
-    box-shadow: 0 0 20px rgba(0,0,0,.1);
-}
-
-.requirements {
-    text-align: right;
-}
-
-.main.supporting {
-    float: left;
-    width: 66%;
-    padding-bottom: 4%;
-}
-
-.main.supporting:first-of-type p:first-of-type::first-letter{
-    font-size: 2em;
-    font-weight: bold;
-    border-top: 0.5px solid orange; 
-    border-bottom: 0.5px solid orange; 
-}
-
-.sidebar {
-    width: 33%;
-    padding: 0 10px;
-    padding-bottom: 4%;
-}
-.sidebar li{
-    border-top: 1px solid green;
-    margin-bottom: 1em;
-}
-
-.sidebar h3{
-    text-align: center;
-}
-
-.sidebar li:last-child {
-    border-bottom: 1px solid green;
-}
-
-.design-selection a{
-    display: block;
-}
-
-.designer-name:before{
-    content:"\00A9";
-    font-size: 0.2em;
-}
-
-footer a{
-    margin: 1%;
+a:active {
+  color: #003366;
 }
 
 footer {
-    display: block;
-    width: 100%;
-    height: 20px;
-    position: fixed;
-    bottom: 0;
-    background-color: #333;
-    color: #fff;
-    padding: 1%;
+  padding: 20px;
+  color: black;
+  text-align: center;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+p {
+	margin: 0 auto;
 }
 
-ul {
-    list-style-type: none;
+.texto-contato {
+	margin-left: 10%;
 }
+
+
+/* Estilos para o menu horizontal */
+.nav-menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-menu li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.nav-menu li:last-child {
+  margin-right: 0;
+}
+
+.nav-menu li a {
+  text-decoration: none;
+}
+
+.bold::first-letter {
+    font-size: 2em;
+    font-weight: bold;
+    border-top: 0.5px solid orange; 
+    border-bottom: 0.5px solid orange;
+    text-transform: uppercase;
+}
+
+img {
+	display: flex;
+}
+
+.imgRight{
+	float: left;
+}
+
+.imgLeft {
+	float: center;
+}
+
+
+
+
